[Add] Add components that make up the page.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "PokeParty",
+  "name": "poke-party",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ionic serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
